# DIP

./: CMakeLists.txt  README.md  edgeDetect.cpp  image_rotate.cpp
Hw2/: CMakeLists.txt  Chapter2_1.pgm  image_rotate.cpp  readme.txt  references  references.md  实验结果.txt
Hw2/img_compare/: img_compare.py
Hw2/img_compare/img_compare/: img_compare_SSIM.py  img_compare_cos.py  img_compare_hash.py  img_compare_histogram.py  img_compare_mutual.py
Hw2/opt/: Chapter2_1_interpolation_2.txt  img_rotate_interpolation_0.txt  img_rotate_interpolation_1.txt  img_rotate_interpolation_2.txt  img_rotate_interpolation_4.txt
Hw3/: Chapter3_1.pgm  Hw3  Hw3.m  LoG_fig.m
Hw5/: main.cpp  plot.py  readme.txt
